fix(macros/CSS_Ref): align first items per column

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -491,11 +491,10 @@ pre {
 
     @media screen and (min-width: $screen-xl) {
       columns: 3;
-      margin-bottom: 0.5rem;
     }
 
     li {
-      margin: 0.5rem 0;
+      margin: 0 0 0.5rem 0;
     }
   }
 
